--- a/src/tests/tests.vcxproj
+++ b/src/tests/tests.vcxproj
@@ -1,4 +1,4 @@
-rgets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <ItemGroup>
         <ProjectConfiguration Include="Debug|x64">
             <Configuration>Debug</Configuration>
