--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,46 +4,15 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "output_directory",
-            "type": "shell",
-            "command": "mkdir",
-            "args": [
-                "${workspaceRoot}/build"
-            ]
-        },
-        {
-            "label": "cmake",
-            "type": "shell",
-            "options": {
-                "cwd": "${workspaceRoot}/build"
-            },
-            "command": "cmake",
-            "args": [
-                "-A",
-                "x64",
-                "./.."
-            ]
-        },
-        {
             "label": "build",
             "type": "shell",
             "options": {
-                "cwd": "${workspaceRoot}/build"
+                "cwd": "${workspaceRoot}"
             },
             "windows":{
-                "command": "msbuild",
-                "args": [
-                    // Ask msbuild to generate full paths for file names.
-                    "/property:GenerateFullPaths=true",
-                    "/t:build",
-                    "qcmake.sln"
-                ]
+                "command": ".\\build.bat"
             },
             "group": "build",
-            "dependsOn": [
-                "cmake"
-            ],
-            "dependsOrder": "sequence",
             "presentation": {
                 // Reveal the output only if unrecognized errors occur.
                 "reveal": "silent"
