added mac support to vscode/cmake-msvc-qt5

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,9 @@
             "windows":{
                 "command": ".\\build.bat"
             },
+            "osx":{
+                "command": "./build.sh"
+            },
             "group": "build",
             "presentation": {
                 // Reveal the output only if unrecognized errors occur.
